--- a/app/ui/main_window.ui
+++ b/app/ui/main_window.ui
@@ -591,6 +591,7 @@
     </property>
     <addaction name="action_fetch_golestan"/>
     <addaction name="action_manual_fetch"/>
+    <addaction name="action_reset_golestan_credentials"/>
    </widget>
    <widget class="QMenu" name="menu_tools">
     <property name="title">
@@ -621,6 +622,11 @@
   <action name="action_export_exam_schedule">
    <property name="text">
     <string>صدور برنامه امتحانات</string>
+   </property>
+  </action>
+  <action name="action_reset_golestan_credentials">
+   <property name="text">
+    <string>فراموش کردن اطلاعات ورود به گلستان</string>
    </property>
   </action>
  </widget>
